# paper_darvish_2022_humanoids_action-kindyn-predicition

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  environment.yml  setup.cfg
kindyn_prediction/: __init__.py
kindyn_prediction/gmoe/: __init__.py  custom_layers.py
kindyn_prediction/utils/: __init__.py  dataset_utils.py  utils.py
kindyn_prediction/window_generator/: __init__.py  window_generator.py  window_generator_gmoe.py
scripts/: animate_action_prediction.py  animate_joint_angle_prediction.py  animate_wrench_prediction.py  run_animations.sh  test_moe.py  train.py
src/: CMakeLists.txt
src/humanDataPreparation/: CMakeLists.txt
src/humanDataPreparation/app/: CMakeLists.txt  humanDataAcquisitionForAnnotation.ini  humanDataAcquisitionForLogging.ini  humanDataStreamingTestFromLoggedFile.ini  humanDataStreamingTestOnline.ini
src/humanDataPreparation/include/: module.hpp
src/humanDataPreparation/src/: main.cpp  module.cpp
src/humanPredictionVisualizer/: CMakeLists.txt
src/humanPredictionVisualizer/app/: CMakeLists.txt  HumanPredictionVisualizer.ini  HumanVisualizer.ini
src/humanPredictionVisualizer/src/: main.cpp
tests/: test_gmoe.py  test_utils.py  test_window_generator.py
