[metadata]
name = kindyn-prediction
version = 1.0.0
authors = [
    {name = "Kourosh Darvish", email = "Kourosh.Darvish@gmail.com" },]
description = framework for human whole-body kinematics and dyanmics motion prediction and symbolic action prediction
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/ami-iit/paper_darvish_2022_humanoids_action-kindyn-predicition.git"

[options]
packages = find:

[options.packages.find] # do not mistake tests/ for a package directory
exclude=tests*

[tool:pytest] # check how much of the codebase is covered/tested
addopts = --cov=kindyn_prediction

[flake8]
ignore = W292, W391, F541, F841,
exclude = notebooks/*, *.ipynb_checkpoints*
